# quiz-app

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html
.github/workflows/: deploy.yml
src/: main.rs  models.rs
src/components/: mod.rs  question.rs
static/: index.html  questions.csv  quiz_questions_full.csv  quiz_questions_sample.csv  styles.css
static/assets/: styles.css
